src/test/deca/context/valid/methods/method_call_with_expression_args.deca
// Description :
// Appel de méthode avec expressions comme arguments
//
// Resultats :
// ok

class Y {
    int f(int a, int b) { return a + b; }
    int test() { return f(1+2, 3*2); }
}
