src/test/deca/context/invalid/classes/duplicate_method_same_sig.deca
// Description :
//    Deux méthodes avec même nom et même signature.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        return 1;
    }

    int f() {
        return 2;
    }
}

{
}

